# jubilee

./: .gitignore  Jubilee Reference.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
examples/Controls/: controls.py
examples/Headless/: config.toml  config.txt  headless.py  headless_worker.py
examples/Hello/: hello.py  hello_worker.py
examples/Image_Effects/: image_effects.py
examples/Images/: images.py
examples/Modes/: config.toml  modes.py
examples/No Display/: no_display.py  no_display_worker.py
examples/Pointer/: pointer.py
examples/Rotation/: config.txt  rotation.py
examples/Screen_Rotation/: config.toml  screen_rotation.py
examples/Script/: script.py  script.txt
examples/Sound/: sound.py
examples/Submodes/: submodes.py
jubilee/: __init__.py  app.py  base_classes.py  config.toml  config.txt  controls.py  log_mode.py  misc.py  mode.py  shut_down_mode.py  touch_interface.py  worker.py
